--- a/index_files/main.css
+++ b/index_files/main.css
@@ -124,6 +124,7 @@ header{
 		float: left;
 		width: 100%;
 		text-align: center;
+		padding: .5em;
 		}
 		
 .logo img{
@@ -258,9 +259,10 @@ width: 40px;
 
 	
 .address-top{
-	font-size:1.55em;
+	font-size:1.45em;
 	text-align: center;
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 100;
 	color: white;
 	width: 100%;
 	float: left;
@@ -362,7 +364,7 @@ nav li{
 	
 .carousel-caption{
 	
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	font-weight: 300;
 	font-size: 2em;
 	padding: 0%;
@@ -894,7 +896,11 @@ h2{
 	margin: auto 25%;
 	
 
-
+	
+	}	
+	
+.npc-logo a:hover{
+	
 	
 	
 	}	
@@ -1064,7 +1070,7 @@ h2{
   .logo{
 	  
 	  width: 25%;
-	  padding: 2%;
+	  padding: 1%;
 	  margin: 0%;
 	
 	  
@@ -1176,7 +1182,7 @@ nav li{
 	
 	.address-top{
 		
-		font-size: 1.25em;
+		font-size: 1.15em;
 		padding-top: .65em;
 		width: 55%;
 		float: left;
@@ -1602,10 +1608,10 @@ height: 3%;
 
 	.address-top{
 	
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	color: white;
 	width:54%;
-	font-size: 1.25em;
+	font-size: 1.15em;
 	padding-top: .55em;
 	padding-left: 5em;
 	
@@ -1617,7 +1623,7 @@ height: 3%;
 nav{
 	float: right;
 	width: 75%;
-	padding: .85em .5em;
+	padding: .5em .2em;
 		
 
 	
@@ -1661,7 +1667,6 @@ nav li{
 	
 .carousel-caption{
 	
-	font-family: 'Open Sans Condensed', sans-serif;
 	font-weight: 100;
 	text-align: center;
 	font-size: 2em;
@@ -2193,9 +2198,9 @@ body{
 
 .logo{
 	  
-	  width: 20%;
-	  padding: .8em;
-	  margin: 0%;
+	  width: 22%;
+	  padding: .25em;
+	  margin: .5%;
 	
 	  
 	  
@@ -2204,7 +2209,7 @@ body{
 	  
 	 .logo img{
 		 
-		 width: 100%
+		 width: 100%;
 		 
 		 
 		 } 	
@@ -2212,7 +2217,6 @@ body{
 
 	.address-top{
 	
-	font-family: 'Open Sans Condensed', sans-serif;
 	color: white;
 	width:55%;
 	font-size: 1.45em;
@@ -2262,6 +2266,7 @@ body{
 nav li{
 	
 	font-family: 'Oswald', sans-serif;
+	font-size: 1.0125em;
 	text-align: right;
 	font-weight: 300;
 	text-transform: uppercase;
@@ -2316,7 +2321,6 @@ nav li{
 	
 .carousel-caption{
 	
-	font-family: 'Open Sans Condensed', sans-serif;
 	font-weight: 100;
 	text-align: center;
 	font-size: 2em;
