--- a/css/main.css
+++ b/css/main.css
@@ -856,7 +856,8 @@ h2{
 	
 .copyright{
 	
-	font-family: 'Opens Sans', arial, verdana, sans-serif;
+	font-family: 'Oswald', arial, verdana, sans-serif;
+	font-weight: 100;
 	text-align: center;
 	background-image:url(../img/news-bg.jpg);
 	background-position: 100%;
