--- a/css/main.css
+++ b/css/main.css
@@ -277,8 +277,6 @@ li{
 	
 	
 	
-	
-	
 	}
 	
 
@@ -289,9 +287,6 @@ ul{
 	}
 	
 	
-	
-	
-
 
 	
 nav li{
@@ -529,36 +524,42 @@ span.line-4{
 	text-align: center;
 	background-image:url(../img/news-bg.jpg);
 	background-repeat: no-repeat;
-	max-width: 1200px;
+	background-position: center;
+	background-size: cover;
 	width: 100%;
-	height: auto;
-	padding-top: .45em;
-	margin: auto;
+	display: inline-block;
+
+	
+	
+	
 	
 	
 	}
 
 
-h1{
+.news h1{
 	font-family: 'Oswald', sans-serif;
-	font-size: 2em;
+	font-size: 1.75em;
 	font-weight: 700;
-	margin-top: .15em;
 	color: white;
 	
 	
 	}
 	
-h2{
+.news h2{
 	font-family: 'Open Sans Condensed', sans-serif;
 	color: #ccc;
 	font-weight: 100;
 	font-size: 1.8em;
 	padding: 0em 0em 1em 0em;
-	margin: 0% 5%;
+	margin: 0% 2%;
 	
 	
 	
+	}	
+	
+#button{
+	height: 4em;
 	}	
 	
 .button{
@@ -566,10 +567,14 @@ h2{
 	color: white;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
-	font-size: 1.85em;
+	font-size: 1.35em;
 	text-transform: uppercase;
 	text-decoration: none;
 	width: 90%;
+	padding: .5em 1.5em;
+	overflow: hidden;
+	clear: both;
+	margin: 1em;
 }
 	.button{
 	-moz-box-shadow:inset 1px 1px 27px 0px #cf866c;
@@ -1617,6 +1622,7 @@ height: 3%;
 
 nav{
 	float: right;
+	text-align: center;
 	width: 75%;
 	padding: .85em .5em;
 		
@@ -1628,6 +1634,7 @@ nav{
 nav li{
 	
 		font-size: 1em;
+		
 
 	
 	}
@@ -1801,17 +1808,17 @@ ol{
 	text-align: center;
 	background-image:url(../img/news-bg.jpg);
 	background-repeat: no-repeat;
-	max-width: 1200px;
+	max-width: 100%;
 	width: 100%;
-	height: auto;
 	padding-top: .45em;
+	paddting-bottom: .45em;
 	margin: auto;
 	
 	
 	}
 
 
-h1{
+.news h1{
 	font-family: 'Oswald', sans-serif;
 	font-size: 2em;
 	font-weight: 700;
@@ -1821,12 +1828,12 @@ h1{
 	
 	}
 	
-h2{
+.news h2{
 	font-family: 'Open Sans Condensed', sans-serif;
 	color: #ccc;
 	font-weight: 100;
-	font-size: 1.8em;
-	padding: .5em 2em;
+	font-size: 1.5em;
+	margin-top: 0em;
 	
 	
 	
@@ -1837,7 +1844,7 @@ h2{
 	color: white;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
-	font-size: 1.85em;
+	font-size: 1.5em;
 	text-transform: uppercase;
 	text-decoration: none;
 	width: 90%;
@@ -2257,17 +2264,19 @@ body{
 	ul{
 		width: 100%;
 		float: left;
+		text-align: left;
+		
 		
 		}
 	
 nav li{
 	
 	font-family: 'Oswald', sans-serif;
-	text-align: right;
+	
 	font-weight: 300;
 	text-transform: uppercase;
 	margin: 0%;
-	padding: 0em .45em;
+	padding: 0em .2em;
 	
 	
 
@@ -2286,8 +2295,9 @@ nav li{
 	nav{
 		
 		text-align: right;
-		font-size: 1.18em;
 		height: auto;
+		font-size: 1.25em;
+
 		}	
 	
 	
@@ -2461,9 +2471,8 @@ ol{
 	text-align: center;
 	background-image:url(../img/news-bg.jpg);
 	background-repeat: no-repeat;
-	max-width: 1200px;
+	max-width: 100%;
 	width: 100%;
-	padding-top: .45em;
 	padding-bottom: .45em;
 	margin: auto;
 	
@@ -2471,11 +2480,11 @@ ol{
 	}
 
 
-h1{
+.news h1{
 	font-family: 'Oswald', sans-serif;
-	font-size: 2.5em;
+	font-size: 2.25em;
 	font-weight: 700;
-	margin-top: .55em;
+	margin-top: 1em;
 	color: white;
 	padding: 0%;
 	line-height: 2%;
@@ -2487,14 +2496,19 @@ h1{
 	font-family: 'Open Sans Condensed', verdana, arial sans-serif;
 	color: #ccc;
 	font-weight: 100;
-	margin-bottom: 2%;
+	font-size: 2em;
+	padding: 0em 1em;
 	
 	
 	
 	}
 	
 	
+#button{
 	
+	height: 6em;
+	
+	}	
 
 	
 		
@@ -2509,7 +2523,6 @@ h1{
 	text-transform: uppercase;
 	text-decoration: none;
 	width: 20%;
-	padding: .1em;
 }
 	.button {
 	-moz-box-shadow:inset 1px 1px 27px 0px #cf866c;
