--- a/css/main.css
+++ b/css/main.css
@@ -753,6 +753,9 @@ span.line-4{
 		}
 		
 		
+
+	
+		
 	img.footer-logo{
 		margin: auto 33%;
 		width: 40%;
@@ -800,7 +803,11 @@ span.line-4{
 	
 	
 	
+			#footer-links{
 		
+		text-align: center;
+		
+		}	
 
 		
 		
@@ -809,7 +816,7 @@ span.line-4{
 	 font-family: 'Oswald', arial, verdanca, sans-serif;
 	 text-transform: uppercase;
 	 font-weight: 300;
-	 font-size: 1em;
+	 font-size: 1.25em;
 	 color: white;
 	 
 	}
@@ -856,7 +863,7 @@ span.line-4{
 	
 	}
 	
-	
+
 	
 	
 .copyright{
@@ -1398,6 +1405,7 @@ div#social-footer{
 	width: 15%;
 	float: right;
 	margin: 0em;
+	margin-right: .75em;
 
 
 	}
@@ -2276,7 +2284,7 @@ nav li{
 	font-weight: 300;
 	text-transform: uppercase;
 	margin: 0%;
-	padding: 0em .2em;
+	padding: 0em .3em;
 	
 	
 
@@ -2294,7 +2302,7 @@ nav li{
 		
 	nav{
 		
-		text-align: right;
+		text-align: left;
 		height: auto;
 		font-size: 1.25em;
 
@@ -2720,13 +2728,18 @@ footer{
 	.footer-links li{
 		
 	display: inline;
-	font-size: .85em;
-	padding: 0em 1em;
+	font-size: 1em;
+	padding: 0em .55em;
+	
 		
 		
 		}
 	
-	
+	#footer-links{
+		
+		text-align: center;
+		
+		}
 
 		
 
