--- a/css/main.css
+++ b/css/main.css
@@ -1621,7 +1621,7 @@ height: 3%;
 	font-family: 'Open Sans Condensed', sans-serif;
 	color: white;
 	width:54%;
-	font-size: 1.25em;
+	font-size: 1.15em;
 	padding-top: .55em;
 	padding-left: 5em;
 	
@@ -1643,7 +1643,7 @@ nav{
 
 nav li{
 	
-		font-size: 1.1em;
+		font-size: .85em;
 		
 
 	
