--- a/css/interior.css
+++ b/css/interior.css
@@ -24,8 +24,21 @@ body{
 	}
 	
 
-
+.logo{
 	
+	margin: 0em;
+	
+	
+	
+	}
+
+	.active-link{
+		
+		
+		color: #37bdef;
+		
+		
+		}
 
 
 #title-bar{
@@ -75,7 +88,16 @@ body{
 	
 	}	
 	
+
+#title-bar h2{
 	
+	padding: .35em 0em .75em 0em;
+	margin: 0em;
+	
+	
+	}	
+	
+
 	
 #content-area{
 	
@@ -100,6 +122,7 @@ body{
 	#section-2{
 		
 		clear: both;
+	
 		
 		
 		}	
@@ -107,33 +130,90 @@ body{
 	
 	.section-1-image{
 		
-		width: 18%;
-		height: 120px;
+		width: 28%;
 		float: left;
 		margin: 1em;
+		background-image: url(../img/training-1.jpg);
+		background-position: em 0em;
+		background-repeat: no-repeat;
+		background-size: 100%;
+		padding-top: 16em;
 		
-		background-color: gray;
 		
 		
 		
 		}
 		
+	.section-2-image{
+		
+		width: 28%;
+		float: left;
+		margin: 1em;
+		background-image: url(../img/training-2.jpg);
+		background-position: em 0em;
+		background-repeat: no-repeat;
+		background-size: 100%;
+		padding-top: 16em;
+		
+		}	
+		
 		
 	.section-1-copy{
 		
-		width: 72%;
+		width:62%;
 		float: right;
-		margin: 1em;
+		margin: .5em;
+		
 		
 		
 		}	
 		
 	.section-2-copy{
 		
-		width: 70%;
+		width: 62%;
 		float: right;
-		margin: 1.5em;
+		margin: .5em;
+		padding-right: 3em;
 		
+		}	
+		
+		
+	.section-2-copy h3{
+		
+		
+		color: #666;
+		font-size: 1.25em;
+		
+		
+		
+		}	
+		
+		
+		
+.section-2-copy p{
+		
+		
+		color: #666;
+		font-size: 1.15em;
+		line-height: 1.5em;
+		margin-bottom: 5em;
+		
+		
+		
+		}	
+		
+.section-2-copy .p-1{
+	
+	margin-bottom: 0em;
+	
+	
+	
+	}			
+		
+	.section-2-copy h1, .section-1-copy h1{
+		
+		margin: em;
+		padding: 0em;
 		}	
 		
 	h1, h2{
@@ -150,20 +230,271 @@ body{
 		
 		}	
 
+.bullet-section{
+	
+	
+	width: 40%;
+	float: left;
+	padding-top: .5em;
+	
+	
+	
+	}
+
+
 
 .bullets{
 	font-family: 'Oswald', arial, verdana, sans-serif;
 	color: #666;
 	font-weight: 300;
-	font-size: 1em;
-	line-height: 1.8em;
+	font-size: 1.25em;
+	line-height: 1.7em;
 	margin-top: 0em;
 	padding-top: 0em;
-	margin-left: -2em;
+	margin-left: -1em;
 	
 	
 	}
 	
+	
+.resources{
+	
+	background-color: black;
+	padding: 1em 0em;
+	
+	
+	}	
+	
+
+@media only screen and (max-width: 641px) {	
+
+
+
+#title-bar{
+	
+	background-image: none;
+	background-color: #000;
+	
+	}
+
+.title-header{
+	background-image: none;
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.75em;
+	font-weight: 700;
+	color: #fff;
+	text-transform: uppercase;
+	padding-top: 13.5em;
+	
+	
+	
+	
+	}
+	
+	.title-sub-header{
+	
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.5em;
+	font-weight: 100;
+	color: white;
+	padding-bottom: em;
+	
+	
+	
+	
+	}	
+	
+	
+
+
+#title-bar h2{
+	
+	padding: .35em 0em .95em 0em;
+	margin: 0em;
+	
+	
+	}
+	
+	
+	
+	.button{
+		
+		color: black;
+		
+		
+		
+		}
+	
+
+.footer-links{
+	
+	
+	display: none;
+	
+	
+	}
+	
+	
+#section-1, #section-2{
+	
+		margin: 0em;
+		padding: 0em;
+		
+	
+	
+	
+	}	
+	
+	.section-1-image{
+		
+		width: 90%;
+		background-image: url(../img/training-1.jpg);
+		background-position: 0em -3em;
+		background-repeat: no-repeat;
+		background-size: 100%;
+		padding-top: 30em;
+		margin: 0em 5%;
+		
+		
+		
+		
+		
+		}
+		
+		
+		
+	.section-2-image{
+		
+		width: 90%;
+		
+		background-image: url(../img/training-2.jpg);
+		background-position: em 0em;
+		background-repeat: no-repeat;
+		background-size: 100%;
+		padding-top: 30em;
+		margin: 0em 5%;
+		
+		}	
+		
+		
+	.section-1-copy{
+		
+		width: 100%;
+		float: none;
+	
+		
+		
+		}	
+		
+	.section-2-copy{
+		
+		width: 100%;
+		float: none;
+		
+		}	
+		
+		
+	.section-2-copy h3{
+		
+		
+		color: #666;
+		font-size: 1.25em;
+		margin: 0em;
+		padding: 0em;		
+		
+		}	
+		
+		
+		
+.section-2-copy p{
+		
+		
+		color: #666;
+		font-size: 1.15em;
+		line-height: 1.5em;
+		margin: 0em 10%;
+		margin-bottom: 5em;
+		text-align: left;
+		
+		
+		
+		
+		}		
+		
+	.section-2-copy h1, .section-1-copy h1{
+		
+		margin: em;
+		padding: .25em;
+		}	
+		
+	.section-2-copy h3{
+		
+		text-align: center;
+		
+		
+		}	
+		
+	.traditional, .online{
+		
+		clear: both;
+		margin: 0em;
+		padding: 0em;
+		overflow: hidden;
+		text-align: center;
+		font-size: 1.25em;
+		float: none;
+		}	
+		
+	h1, h2{
+		
+		font-family: 'Oswald', arial, verdana, sans-serif;
+		font-weight: 400;
+		font-size: 1.75em;
+		color: #666;
+		padding-bottom: 0em;
+		margin-bottom: 0em;
+		
+		
+		
+		
+		}	
+
+.bullet-section{
+	
+	
+	width: 40%;
+	float: left;
+	padding-top: .5em;
+	margin-left: 1.25em;
+	
+	
+	
+	}
+
+
+
+.bullets{
+	font-family: 'Oswald', arial, verdana, sans-serif;
+	color: #666;
+	font-weight: 300;
+	font-size: 1.25em;
+	line-height: 1.7em;
+	margin-top: 0em;
+	padding-top: 0em;
+	
+	
+	}
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+}	
 	
 	
 	@media only screen and (min-width: 641px) {
@@ -208,6 +539,23 @@ nav{
 	}		
 		
 		
+			.footer-links ul a {
+		
+		font-weight: 100;
+		
+		}
+		
+		
+		
+		.footer-links ul {
+		
+		font-size: .85em;
+		
+		}
+	
+		
+		
+		
 	}
 	
 	@media only screen and (min-width: 768px){
@@ -239,7 +587,20 @@ nav{
 	}
 		
 		
+		.footer-links ul a {
 		
+		font-weight: 100;
+		
+		}
+		
+		
+		
+		.footer-links ul {
+		
+		font-size: .85em;
+		
+		}
+
 		
 		}
 		
@@ -252,7 +613,7 @@ nav{
 	font-weight: 700;
 	color: #fff;
 	text-transform: uppercase;
-	padding-top: 3em;
+	padding-top: 4em;
 	
 	
 	
@@ -260,10 +621,16 @@ nav{
 	}	
 	
 	
-	
+	.footer-links ul {
+		
+		font-size: .85em;
+		
+		}
 
 		
 		
 		
 		
-		}		
+		}	
+		
+			
