--- a/css/main.css
+++ b/css/main.css
@@ -123,13 +123,13 @@ header{
 		clear: both;
 		overflow: hidden;
 		float: left;
-		width: 100%;
-		text-align: center;
+		width: 50%;
 		}
 		
 .logo img{
 	
-	width: 55%;
+	width: 100%;
+	padding-top: .65em;
 	
 	
 	}	
@@ -154,69 +154,9 @@ nav{
 	}
 
 
-#link-block{
-	
-	padding-top: 5em;
-	
-	}
-
-
-.r-nav{
-	
-	height: 80%;
-	clear: both;
-	overflow: hidden;
-	
-	}	
-	
-.link-block{
-	
-	width: 50%;
-	float: left;
-	overflow: hidden;
-	margin: auto;
-	border: 1px solid black;
-	clear: right;
-
-	
-	
-	}	
-	
-.link-block a{
-	
-	color: white;
-	text-align: center;
-	padding: 5%;
-	width: 100%;
-	overflow: hidden;
-	font-family: 'Oswald', arial, verdana, sans-serif;
-	font-size: 150%;
-	float: left;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#4c4c4c+0,595959+12,1c1c1c+91,131313+100 */
-background: #4c4c4c; /* Old browsers */
-background: -moz-linear-gradient(top,  #4c4c4c 0%, #595959 12%, #1c1c1c 91%, #131313 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #4c4c4c 0%,#595959 12%,#1c1c1c 91%,#131313 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #4c4c4c 0%,#595959 12%,#1c1c1c 91%,#131313 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
-
-	
-	}	
-	
-.link-block a:hover{
-		text-decoration: none;
-		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e04c47+2,cc0000+12,911000+100 */
-background: #e04c47; /* Old browsers */
-background: -moz-linear-gradient(top,  #e04c47 2%, #cc0000 12%, #911000 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #e04c47 2%,#cc0000 12%,#911000 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #e04c47 2%,#cc0000 12%,#911000 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e04c47', endColorstr='#911000',GradientType=0 ); /* IE6-9 */
-
-
 	
 	
 	
-	
-	}	
 
 	
 	
@@ -235,28 +175,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e04c47', end
 	
 	}	
 	
-#social{
-	
-	width:100%;
-	text-align: center;
 
+.social li a{
+	
 	
 	}
+
+
+
+
 	
-.social{
+.social-block ul li {
 	display: inline;
 	
 	
 	
-	}	
-
-div.social a img{
-	
-width: 40px;
-
-
-	
-	}
+		
+}
 
 	
 .address-top{
@@ -264,12 +199,53 @@ width: 40px;
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif;
 	color: white;
-	width: 100%;
+	width: 80%;
 	float: left;
 	clear: both;
 
 	
 	}
+	
+	
+.mobile-address{
+	color: white;
+	font-family: 'Oswald', verdana, arial, sans-serif;
+	font-weight: 300;
+	font-size: 1.2em;
+	text-align: center;
+	clear: both;
+	overflow: hidden;
+	padding-top: 0em;
+	
+	}
+	
+	
+.mobile-social-block{
+	
+	margin: 0em 32%;
+	width: 40%;
+	
+	}	
+	
+.mobile-social{
+	
+	overflow: hidden;
+	clear: both;
+	display: inline;
+
+
+	}	
+	
+	
+	
+.mobile-social img{
+	
+
+width: 30%
+
+	}		
+	
+
 	
 
 li{
@@ -288,14 +264,19 @@ ul{
 	clear: both;
 	}
 	
-	
+	a:focus, a:hover{
+		
+		color: transparent;
+		
+		
+		}
 
 	
 nav li{
 	text-align: center;
 	font-size: 1.15em;
 	font-family: 'Oswald', sans-serif;
-	font-weight: 300;
+	font-weight: 400;
 	text-transform: uppercase;
 	
 
@@ -307,34 +288,25 @@ nav li{
 	
 	nav ul li a:link {
 	color: white;
-	font-weight: 700;
+	font-weight: 400;
 	text-align: center;
 	margin: .15em .15em;
 
 		}
 	
 	nav ul li a:hover {
-	color: gray;
-	font-weight: 700;
-	text-decoration: none;
-	width: 100%;
-	padding: 0% 100%;
+		color: red;
 		}
 		
 		
 	nav li a:visited {
 		
-	color: white;
-	text-decoration: none;
-	 font-weight: 700;
+
+
 		}	
 		
 	nav li a:active {
-		
-	text-decoration: none;
-	 font-weight: 700;
-	color: black;
-		
+
 		}
 	
 
@@ -360,8 +332,8 @@ nav li{
 .carousel-caption{
 	
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-weight: 300;
-	font-size: 2em;
+	font-weight: 700;
+	font-size: 1.25em;
 	padding: 0%;
 	margin: .5%;
 	
@@ -552,9 +524,9 @@ span.line-4{
 	font-family: 'Open Sans Condensed', sans-serif;
 	color: #ccc;
 	font-weight: 100;
-	font-size: 1.8em;
+	font-size: 1.5em;
 	padding: 0em 0em 1em 0em;
-	margin: 0% 2%;
+	margin: 0% 5%;
 	
 	
 	
@@ -600,7 +572,7 @@ span.line-4{
 	text-shadow:0px 1px 16px #854629;
 }
 .button:hover {
-	color:black;
+	color: silver;
 	text-decoration: none;
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bc3315), color-stop(1, #c71111));
 	background:-moz-linear-gradient(top, #bc3315 5%, #c71111 100%);
@@ -806,7 +778,7 @@ span.line-4{
 	
 	
 			#footer-links{
-		
+		width: 100%;
 		text-align: center;
 		
 		}	
@@ -846,14 +818,10 @@ span.line-4{
 	}
 	
 		
-#social-footer{
-	width: 100%;
-	margin: auto 33%;
-	
-	}
+
 		
-#social-footer img{
-	width:10%;
+.social-footer img{
+	width:5%;
 	display: inline;
 	
 	
@@ -882,13 +850,7 @@ span.line-4{
 	
 	}	
 	
-.resources{
-	
 
-
-	
-	
-	}	
 	
 .copyright p{
 	
@@ -899,6 +861,9 @@ span.line-4{
 	
 .npc-logo img, .ifbb-logo img, .npc-oregon-logo img, .md-logo img{
 	width: 50%;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	
 	
 	}	
 	
@@ -1016,7 +981,40 @@ span.line-4{
 	}
 	
 	
+	/* Dropdown*/
+	
+	
+	
+	
+	
+	
 /*Carousel Caption*/	
+
+
+
+.address{
+	
+	color: white;
+	font-size: .75em;
+	
+	
+	}
+	
+	
+.social-block, .social-mobile-block{
+	
+	
+	padding: 0em;
+	margin: 0em;
+	display: inherit;
+	
+	
+	}
+	
+	
+	
+	
+	
 	
 .mobile-hero{
 	
@@ -1082,12 +1080,10 @@ header{
 	
   .logo{
   
-  clear: both;
-  overflow: hidden;
-  float: left;
-  width: 100%;
+
+  width: 55%;
+  padding: .5em 0em 0em 2em;
   text-align: center;
-  padding-top: .5em;
  
 		}
 		
@@ -1095,18 +1091,123 @@ header{
 		
 .logo img{
 	
-	width: 40%;
+	width: 100%;
 	
 	
 	}
 	
 	
+	
+	
+	
+	
 	.address-top{
 		
-		font-size: 1.25em;
+		font-size: 1.15em;
 		
 		
 		}
+		
+	.mobile{
+		
+	color: white;
+	font-weight: 300;
+	font-family: 'Oswald', arial, verdana, sans-serif;	
+		}
+		
+		
+	.social-block{
+		
+		text-align: center;
+		padding: 0em;
+		margin: 0em;
+		
+		
+		}	
+		
+		
+		
+		
+	.social-block-mobile{
+		display: block;
+		
+		}	
+		
+	.social-mobile img{
+		
+		
+		width: 5%;
+		
+		}	
+		
+		
+	.dropbtn {
+	background-image:url(../img/news-bg.jpg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	border-radius: .5em;
+	color: white;
+	text-transform: uppercase;
+	font-family: 'Oswald', arial, verdana, sans-serif;
+	font-weight: 700px;
+    padding: .75em  2em;
+    font-size: 1.35em;
+	width: 100%;
+    border: none;
+    cursor: pointer;
+	margin-top: 1em;
+	
+	
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+	float: left;
+	padding:  0em 0em 0em 1.5em;
+}
+
+.dropdown-content {
+    display: none;
+	margin-left: -5em;
+    position: absolute;
+	z-index: 100;
+    background-color: #f9f9f9;
+    width: 300%;
+}
+
+.dropdown-content a {
+
+	text-align: left;
+	padding: .85em;
+	font-size: 1.65em;
+	font-weight: 300;
+	font-family: 'Oswald', verdana, sans-serif, arial;
+    color: white;
+    text-decoration: none;
+    display: block;
+	width: 150%;
+	background-image:url(../img/news-bg.jpg);
+	background-position: cover;
+	border-top: 1px silver dotted;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+	
+	
+	
+	
+		
+		
 		
 		
 	nav{
@@ -1115,10 +1216,7 @@ header{
 		background-image: url(../img/news-bg.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
-		background-position: -100px  0px;
 	
-		
-		
 		}	
 	
 	
@@ -1146,7 +1244,7 @@ header{
 	
 	font-size: 1.35em;
 	font-family: 'Oswald', sans-serif;
-	font-weight: 300;
+	font-weight: 700;
 	padding: .25em 0em;
 	border-bottom: 1px dotted #3F3D3D;
 	text-align: center;
@@ -1194,13 +1292,20 @@ nav ul li a:visited {
 }
 
 
-
-nav ul li a{
+.social-block{
 	
-	color: blue;
 	
-	}	
+	padding-top: .5em;
+	
+	}
 
+nav{
+	
+	
+	display: none;
+	
+	
+	}
 	
 	
 	
@@ -1227,153 +1332,166 @@ nav ul li a{
 		}
 	
    
-  .logo{
-	  
-	  width: 20%;
-	  padding: 1.25%;
-	  margin: 0%;
-	
-	  
-	  }
-	  
+  
 	  
 	 .logo img{
 		 
-		 width: 100%
+		 width: 90%
 		 
 		 
 		 } 
  
   
-  #social{
-	  
-	  width: 20%;
-	  display: inline;
-	  
-	  
-	  }
-	  
-	  
-	#social img{
-		
-		
-		width: 5.5%;
-		padding-top: .5em;
-
-		
-		
-		}  
-  
-  
-  li{
+  .logo{
 	
-	
-	list-style-type: none;
-	
-	
+	width: 20%;
+	float: left;
+	overflow: hidden;
+	padding: .5em;
 	
 	
 	
 	}
 	
-
-
-.link-block, .r-nav{
 	
+.mobile-social-block{
 	display: none;
-	height: 0%;
-	
-	}
-	
-nav{
-	display: inherit;
-	padding-top: .5em;
-	
 	
 	}	
-	
-ul{
-	display: inline;
-	
-	
-	}
-	
 
+.mobile-address{
 	
-nav ul li a:hover {
-    color: #6dcff6;
-    font-weight: 700;
-    text-decoration: none;
-    width: 100%;
-    padding: 0% 0%;
-}
-	
-
-nav ul li a:visited {
-    color: white;
-    font-weight: 700;
-    text-decoration: none;
-    width: 100%;
-    padding: 0% 0%;
-}
-	
-	
-	nav ul li a:active {
-    color: #6dcff6;
-    font-weight: 700;
-    text-decoration: none;
-    width: 100%;
-    padding: 0% 0%;
-}
-
-
-
-	
-nav li{
-	display: inline;
-	
-	font-size: .95em;
-	font-family: 'Oswald', sans-serif;
-	font-weight: 300;
-	padding: 0em .5em;
-
-	clear: right;
+	display:none;
 	
 	}	
 	
 	
-	.address-top{
+.social-block{
+	list-style-type: none;
+	width: 80%;
+	float: right;
+	padding-top: .15em;
+
+	
+
+	
+	}	
+	
+	
+.social-block ul li{
+	
+		display: inline;
+	
+	
+	}	
+	
+	
+.social-block ul{
+	
+	
+	}	
+	
+.social img{
+	
+	width: 6%;
+	padding: .1em;
+
+	
+	}	
+	
+	
+	.address{
 		
-		font-size: 1.25em;
-		padding-top: .65em;
-		width: 55%;
-		float: left;
-		clear: right;
-		padding-left: 1em;
+		font-weight: 300;
+		color: white;
+		font-family: 'Oswald', arial, verdana, sans-serif;
+		font-size: .8em;
 		
 		
 		}
-
+		
+		.address:hover{
+		
+		padding-left: 0em;
+		font-weight: 300;
+		color: white;
+		font-family: 'Oswald', arial, verdana, sans-serif;
+		text-decoration: none;
+		
+		}	
+		
+/*================ Dropdown================= */		
 	
-	.link-block{
+.dropdown{
 	
-	width: 50%;
-	float: left;
+	display: none;
+	
+	
+	}
+	
+	
+	
+	
+	
+	
+	
+nav{
+	text-decoration: none;
+	list-style-type: none; 
+	width: 80%;
+	float: right;
+	display: inherit;
+	
+	
+	
+	
+	
+	}
+	
+	
+nav li{
+	
+	display: inline;
+	padding: .1em;
+	font-size: .90em;
 	overflow: hidden;
-	margin: auto;
-	border: 1px solid black;
-	clear: right;
+	
+	
+	}	
+	
+	
+	nav li a:link{
+	
 
 	
 	
 	}	
+	
+	nav li a:active{
+	
+	
+	}	
+	
+	
+	nav ul li a:hover{
+	
+	color: #6dcff6;
+	text-decoration: none;
+	
+	}	
+	
+	
+	
+	
+	
+	
 
   
   
 #hero-copy{
 	position: relative;
 	top: -30px;
-    right:-120px;
+    right: -120px;
 	width: 100%;
 	
 
@@ -1472,6 +1590,7 @@ footer{
 		
 		background-image:url(../img/footer.jpg);
 		background-size: 100%;
+		width: 100%;
 	
 
 		
@@ -1648,7 +1767,7 @@ div#social-footer{
 	}	
 		
 
-}
+}	
 
 
 
@@ -1686,11 +1805,7 @@ clear: both;
 
 	}
 	
-.logo{
-	
-	padding: .5em;
-	
-	}
+
 
 	
 	
@@ -1729,31 +1844,7 @@ height: 3%;
 	
 	}	
 	
-#social-block{
-	
-	
-	float: right;
-	width: 20%;
-	
-	
-	}
-	
-#social{
-	
-	width: 20%;
-	float: right;
-	padding-top: .5em;
-	
 
-	
-	}	
-	
-#social img{
-	
-	width: 25%;
-	clear: right;
-
-	}
 	
 .address-top h4{
 	
@@ -1765,42 +1856,146 @@ height: 3%;
 	}	
 	
 
-
-
+	  
+	 .logo img{
+		 
+		 width: 90%
+		 
+		 
+		 } 
+ 
+  
+  .logo{
 	
-
-	.address-top{
+	width: 20%;
+	float: left;
+	overflow: hidden;
+	padding: .5em;
 	
-	font-family: 'Open Sans Condensed', sans-serif;
-	color: white;
-	width:54%;
-	font-size: 1.15em;
-	padding-top: .55em;
-	padding-left: 5em;
 	
-
+	
 	}
 	
 	
-
-nav{
-	float: right;
-	text-align: center;
+.social-block{
+	list-style-type: none;
 	width: 80%;
-	padding: .80em .5em;
-		
+	float: right;
+	
+	
+	
 
 	
+	}	
+	
+	
+.social-block ul li{
+	
+		display: inline;
+		padding-top: .5em;
+	
+	
+	}	
+	
+	
+.social-block ul{
+	padding-bottom: .5em;
+	
+	}	
+	
+.social img{
+	
+	width: 6%;
+	padding: .1em;
+
+	
+	}	
+	
+	
+	.address{
+		
+		font-weight: 300;
+		color: white;
+		font-family: 'Oswald', arial, verdana, sans-serif;
+		
+		
+		}
+		
+	
+		
+	
+	
+	
+	
+nav{
+	text-decoration: none;
+	list-style-type: none; 
+	width: 80%;
+	float: right;
+	
+	
+	
+	
+	
 	}
-
-
+	
+	
 nav li{
 	
-		font-size: 1.08em;
-		
+	display: inline;
+	padding: .25em;
+	font-size: 1em;
+	overflow: hidden;
+	
+	
+	}	
+	
+	
+	nav ul li a:link{
+	
 
 	
+	
+	}	
+	
+	nav ul li a:active{
+	
+	
+	}	
+	
+	
+	nav ul li a:hover{
+	
+	color: #6dcff6;
+	text-decoration: none;
+	
+	}		
+	
+	
+	nav ul li a:visited{
+	
+	color: silver;
+	
 	}
+	
+	.link-block{
+	
+	width: 50%;
+	float: left;
+	overflow: hidden;
+	margin: auto;
+	border: 1px solid black;
+	clear: right;
+
+	
+	
+	}	
+
+
+	
+	
+	
+
 
  
 
@@ -2204,7 +2399,10 @@ footer{
 	
 		}
 
+	#footer-links{
+		width: 100%;
 		
+		}	
 		
 		
 		
@@ -2361,107 +2559,72 @@ body{
 	
 	
 
-
-.logo{
-	  
-	  width: 20%;
-	  padding: .8em;
-	  margin: 0%;
-	
-	  
-	  
-	  }
-	  
-	  
-	 .logo img{
-		 
-		 width: 100%
-		 
-		 
-		 } 	
-	
-
-	.address-top{
-	
-	font-family: 'Open Sans Condensed', sans-serif;
-	color: white;
-	width:55%;
-	font-size: 1.45em;
-	padding-top: .55em;
-	padding-left: 6em;
-	
-
-	}
-	
-	
-	
-	
-.social-block{
-	
-	float: right;
-	padding: 0%;
-	margin: 0%;
-	
-	
-	
-	}
-	
-	
-	#social{
-		width: 20%;
-		padding: 0%;
-		margin: 0%;
-		padding-top: .15em;
-
 		
-		}
+		.address:hover{
 		
-	#social img{
-		
-		width: 22%;
-		
+		padding-left: 0em;
+		font-weight: 300;
+		color: white;
+		font-family: 'Oswald', arial, verdana, sans-serif;
+		text-decoration: none;
 		
 		}	
 
 
-	ul{
-		width: 100%;
-		float: left;
-		text-align: left;
-		
-		
-		}
+	
+nav{
+	text-decoration: none;
+	list-style-type: none; 
+	width: 80%;
+	float: right;
+	
+	
+	
+	
+	
+	}
+	
 	
 nav li{
 	
-	font-family: 'Oswald', sans-serif;
+	display: inline;
+	padding: .55em;
+	font-size: 1.1em;
+	overflow: hidden;
 	
-	font-weight: 300;
-	text-transform: uppercase;
-	margin: 0%;
-	padding: 0em .3em;
 	
+	}	
+	
+	
+	nav ul li a:link{
 	
 
-	}
 	
-	nav  li  a {
-		
-	color: white;
+	
+	}	
+	
+	nav ul li a:active{
+	
+	
+	}	
+	
+	
+	nav ul li a:hover{
+	
+	color: #6dcff6;
 	text-decoration: none;
-	margin: 0%;
-	padding: 0%;
 	
-		}
+	}		
+	
+	
+	nav ul li a:visited{
+	
+	color: silver;
+	
+	}
 		
 		
-	nav{
-		
-		text-align: left;
-		height: auto;
-		font-size: 1.25em;
 
-		}	
 	
 	
 		
@@ -3001,17 +3164,6 @@ div#social-footer{
 		
 	
 	
-@media screen and (min-width: 1000px){
-	
-	
-	nav{
-		
-		font-size: 1.35em;
-		
-		}
-	
-	
-}
 		
 	
 
