--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,6 @@ header{
 	
 nav{
 	
-	display: inherit;
 	overflow: hidden;
 	
 	}	
@@ -246,6 +245,32 @@ width: 30%
 	}		
 	
 
+a.mailto{
+	
+	
+	color:white;
+	text-decoration: none;
+	
+	}
+	
+	
+a.mailto:hover{
+	
+	
+	color:  #6dcff6;
+	text-decoration: none;
+	
+	}
+	
+	
+	
+.mailto a:focus{
+	
+	color: white;
+	
+	}
+	
+	
 	
 
 li{
@@ -257,6 +282,9 @@ li{
 	
 	}
 	
+
+
+
 
 	
 ul{
@@ -295,17 +323,19 @@ nav li{
 		}
 	
 	nav ul li a:hover {
-		color: red;
+		color: #6dcff6;
+		text-decoration: none;
 		}
 		
 		
 	nav li a:visited {
 		
-
+	color: white;
 
 		}	
 		
 	nav li a:active {
+		
 
 		}
 	
@@ -749,21 +779,16 @@ span.line-4{
 		
 	footer{
 		
-		float: left;
+		
 		width: 100%;
 		margin: 0px;
 		background-image:url(../img/footer.jpg);
 		background-position: cover;
-		padding: .85em 0em;
+		padding: 4em 0em;
 
 		
 		}	
-	ul.footer-links{
-		
-		width: 100%;
-		clear: both;
-		
-		}	
+	
 		
 		
 	.footer-links li{
@@ -777,7 +802,7 @@ span.line-4{
 	
 	
 	
-			#footer-links{
+		#footer-links{
 		width: 100%;
 		text-align: center;
 		
@@ -790,7 +815,7 @@ span.line-4{
 	 font-family: 'Oswald', arial, verdanca, sans-serif;
 	 text-transform: uppercase;
 	 font-weight: 300;
-	 font-size: 1.25em;
+	 font-size: 1em;
 	 color: white;
 	 
 	}
@@ -799,7 +824,7 @@ span.line-4{
 	 footer a:visited{
 	 text-decoration: none;
 	
-	 color: gray;
+	 color: white;
 	 
 	}
 	
@@ -811,9 +836,7 @@ span.line-4{
 	}
 	
 	footer a:active{
-	 text-decoration: none;
 	
-	 color: #6dcff6;
 	 
 	}
 	
@@ -1070,6 +1093,7 @@ header{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 0px -45px;
+	overflow: hidden;
 	width: 100%;
 	
 	
@@ -1081,8 +1105,8 @@ header{
   .logo{
   
 
-  width: 55%;
-  padding: .5em 0em 0em 2em;
+  width: 40%;
+  padding: .5em 0em 0em 1em;
   text-align: center;
  
 		}
@@ -1140,6 +1164,17 @@ header{
 		
 		}	
 		
+	
+	.social-block{
+		
+		display: none;
+		
+		}
+		
+		
+	
+	
+	
 		
 	.dropbtn {
 	background-image:url(../img/news-bg.jpg);
@@ -1204,10 +1239,150 @@ header{
 }
 	
 	
-	
-	
+	.dropbtn{
+		
+		display: none;
 		
 		
+		}
+	
+	
+	
+	
+.address-email{
+	
+	color: white;
+	font-family: 'Oswald', verdana, arial, sans-serif;
+	font-weight: 100;
+	font-size: 1em;
+	text-align: center;
+	clear: both;
+	padding-top: .55em;
+	line-height: 1em;
+	width: 100%;
+	
+	
+	
+	
+	}	
+	
+.mobile-email{
+	
+	font-size: 1.35em;
+	padding-bottom: .5em;
+	
+	}	
+	
+	
+	
+	.show{
+		
+		display: block;
+		
+		
+		}
+	
+	
+	.social-icon-white{
+		
+		clear: both;
+		overflow: hidden;
+		display: inline;
+		padding: 0em;
+		margin: 0em;
+		
+		}
+		
+	.social-icon-white a{
+		
+		float: left;
+	
+		width: 9%;
+		text-align: center;
+		
+
+
+		
+		}	
+	
+	.social-icon-white img{
+		
+		width: 100%;
+		padding-top:1.5em;
+		
+		
+		
+		
+		
+		
+		}
+	
+	
+	#toggle-nav{
+		
+		
+		display: block;
+		position: absolute;
+		top: 15px;
+		right: 20px;
+		z-index: 555;
+		padding: .35em;
+		width: 25%;
+		background-image: url(../img/footer-bg.jpg);
+		background-position: 100%;
+		color: white;
+		font-family: 'Oswald', arial, verdana, sans-serif;
+		font-weight: 100;
+		font-size: 1.35em;
+		text-align: center;
+		border-radius: .25em;
+		
+		
+		
+		
+		}	
+		
+		
+		
+		#toggle-nav:link{
+		
+		
+		text-decoration: none;
+		
+		}	
+			
+		
+	#toggle-nav:hover{
+		
+		
+		text-decoration: none;
+		color: red;
+		
+		}	
+		
+		
+		#toggle-nav:active{
+		
+		
+		text-decoration: none;
+		
+		}	
+		
+		
+		#toggle-nav:visited{
+		
+		
+		text-decoration: none;
+		
+		}	
+		
+		
+	.border-remove{
+		
+		
+		border: none;
+		
+		}	
 		
 		
 	nav{
@@ -1254,6 +1429,8 @@ header{
 	
 	}
 	
+
+	
 	
 	nav ul li a:link{
 		
@@ -1274,23 +1451,17 @@ header{
 }
 	
 
-nav ul li a:visited {
-    color: white;
-    font-weight: 700;
+	nav ul li a:visited {
+   
     text-decoration: none;
-    width: 100%;
-    padding: 0% 0%;
+   
 }
-	
 	
 	nav ul li a:active {
-    color: #6dcff6;
-    font-weight: 700;
+ 
     text-decoration: none;
-    width: 100%;
-    padding: 0% 0%;
+   
 }
-
 
 .social-block{
 	
@@ -1299,15 +1470,33 @@ nav ul li a:visited {
 	
 	}
 
-nav{
+
 	
+ul{
 	
 	display: none;
+	}
 	
+	
+	
+.carousel-caption{
+	
+	padding-bottom: .5em;
 	
 	}
 	
 	
+	
+.news h2{
+	
+	font-size: 1.35em;
+	
+	
+	
+	
+	}	
+	
+
 	
 	}
 
@@ -1336,7 +1525,7 @@ nav{
 	  
 	 .logo img{
 		 
-		 width: 90%
+		 width: 100%
 		 
 		 
 		 } 
@@ -1344,7 +1533,7 @@ nav{
   
   .logo{
 	
-	width: 20%;
+	width: 18%;
 	float: left;
 	overflow: hidden;
 	padding: .5em;
@@ -1368,14 +1557,18 @@ nav{
 	
 .social-block{
 	list-style-type: none;
-	width: 80%;
+	width: 82%;
 	float: right;
-	padding-top: .15em;
+	padding-top: .5em;
+
 
 	
 
 	
 	}	
+	
+	
+	
 	
 	
 .social-block ul li{
@@ -1400,12 +1593,51 @@ nav{
 	}	
 	
 	
+	
+.social-icon-white{
+	
+	
+	display: none;
+	
+	
+	}	
+	
+
+
+a.address.mobile{
+	
+	color:white;
+	font-size: 1em;
+
+	
+	
+	
+	}
+
+a.address.mobile:hover{
+	
+	color:white;
+	
+	
+	
+	}
+
+
+
+	
+.address-email{
+	
+	
+	display: none;
+	
+	}	
+	
 	.address{
 		
 		font-weight: 300;
 		color: white;
 		font-family: 'Oswald', arial, verdana, sans-serif;
-		font-size: .8em;
+		font-size: 1em;
 		
 		
 		}
@@ -1420,6 +1652,9 @@ nav{
 		
 		}	
 		
+		
+		
+		
 /*================ Dropdown================= */		
 	
 .dropdown{
@@ -1432,7 +1667,12 @@ nav{
 	
 	
 	
+#toggle-nav{
 	
+	display: none;
+	
+	
+	}	
 	
 	
 nav{
@@ -1441,6 +1681,7 @@ nav{
 	width: 80%;
 	float: right;
 	display: inherit;
+	overflow: hidden;
 	
 	
 	
@@ -1452,7 +1693,7 @@ nav{
 nav li{
 	
 	display: inline;
-	padding: .1em;
+	padding: .10em;
 	font-size: .90em;
 	overflow: hidden;
 	
@@ -1475,9 +1716,7 @@ nav li{
 	
 	nav ul li a:hover{
 	
-	color: #6dcff6;
-	text-decoration: none;
-	
+
 	}	
 	
 	
@@ -1586,55 +1825,7 @@ span.line-4{
 		
 		}
 		
-footer{
-		
-		background-image:url(../img/footer.jpg);
-		background-size: 100%;
-		width: 100%;
-	
 
-		
-		}
-		
-	img.footer-logo{
-
-		float: left;
-		width: 15%;
-		clear: both;
-		padding: 0em;
-		margin: .5em 0em 0em 3em;
-		}	
-		
-	.footer-logo{
-		
-		width: 30%;
-	
-		}
-
-		
-		
-		
-		
-		
-		
-	.footer-links{
-		
-		width: 60%;
-		float: left;
-	
-		
-		}	
-		
-		
-	.footer-links li{
-		
-	display: inline;
-	font-size: .65em;
-	padding: 0em .35em;
-		
-		
-		}
-	
 	
 
 		
@@ -1645,7 +1836,7 @@ footer{
 	 text-decoration: none;
 	 font-family: 'Oswald', arial, verdana, sans-serif;
 	 text-transform: uppercase;
-	 font-weight: 700;
+	 font-weight: 100;
 	 font-size: 1.1em;
 	 color: white;
 	 vertical-align: middle;
@@ -1656,7 +1847,7 @@ footer{
 	 footer a:visited{
 	 text-decoration: none;
 	
-	 color: #6dcff6;
+	 color: white;
 	 
 	}
 	
@@ -1668,10 +1859,7 @@ footer{
 	}
 	
 	footer a:active{
-	 text-decoration: none;
 	
-	 color: #6dcff6;
-	 
 	}
 	
 		
@@ -1922,9 +2110,29 @@ height: 3%;
 		}
 		
 	
-		
+	a.address.mobile{
+	
+	color:white;
+	font-size: 1em;
+
 	
 	
+	
+	}
+
+a.address.mobile:hover{
+	
+	color: white;
+	
+	
+	
+	}	
+a:hover, a:focus{
+
+color: white;
+
+}
+
 	
 	
 nav{
@@ -1943,7 +2151,7 @@ nav{
 nav li{
 	
 	display: inline;
-	padding: .25em;
+	padding: .15em;
 	font-size: 1em;
 	overflow: hidden;
 	
@@ -1951,32 +2159,8 @@ nav li{
 	}	
 	
 	
-	nav ul li a:link{
-	
 
-	
-	
-	}	
-	
-	nav ul li a:active{
-	
-	
-	}	
-	
-	
-	nav ul li a:hover{
-	
-	color: #6dcff6;
-	text-decoration: none;
-	
-	}		
-	
-	
-	nav ul li a:visited{
-	
-	color: silver;
-	
-	}
+
 	
 	.link-block{
 	
@@ -2028,9 +2212,10 @@ nav li{
 .carousel-caption{
 	
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-weight: 100;
+	font-weight: 700;
 	text-align: center;
 	font-size: 2em;
+	padding-bottom: 1em;
 	
 	}	
 	
@@ -2399,71 +2584,6 @@ footer{
 	
 		}
 
-	#footer-links{
-		width: 100%;
-		
-		}	
-		
-		
-		
-		
-		
-	.footer-links{
-		
-		width: 60%;
-		float: left;
-	
-		
-		}	
-		
-		
-	.footer-links li{
-		
-	display: inline;
-	font-size: .75em;
-	padding: 0em .35em;
-		
-		
-		}
-	
-	
-
-		
-
-		
-		
-	footer a:link{
-	 text-decoration: none;
-	 font-family: 'Oswald', arial, verdanca, sans-serif;
-	 text-transform: uppercase;
-	 font-weight: 700;
-	 font-size: 1.15em;
-	 color: white;
-	 vertical-align: middle;
-	 
-	}
-	
-	
-	 footer a:visited{
-	 text-decoration: none;
-	
-	color: #6dcff6;
-	 
-	}
-	
-	footer a:hover{
-	 text-decoration: none;
-	
-	 color: #6dcff6;
-	 
-	}
-	
-	footer a:active{
-	 text-decoration: none;
-	
-	 color: #6dcff6;
-	 
-	}
 	
 		
 div#social-footer{
@@ -2572,6 +2692,7 @@ body{
 
 
 	
+	
 nav{
 	text-decoration: none;
 	list-style-type: none; 
@@ -2585,43 +2706,19 @@ nav{
 	}
 	
 	
-nav li{
+nav ul li a{
 	
 	display: inline;
-	padding: .55em;
-	font-size: 1.1em;
+	padding: .35em;
+	font-size: 1.2em;
 	overflow: hidden;
+	color: #fff;
 	
 	
 	}	
 	
-	
-	nav ul li a:link{
 	
 
-	
-	
-	}	
-	
-	nav ul li a:active{
-	
-	
-	}	
-	
-	
-	nav ul li a:hover{
-	
-	color: #6dcff6;
-	text-decoration: none;
-	
-	}		
-	
-	
-	nav ul li a:visited{
-	
-	color: silver;
-	
-	}
 		
 		
 
@@ -2654,7 +2751,7 @@ nav li{
 .carousel-caption{
 	
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-weight: 100;
+	font-weight: 700;
 	text-align: center;
 	font-size: 2em;
 	
@@ -3034,66 +3131,7 @@ footer{
 		
 		
 		
-	.footer-links{
-		
-		width: 70%;
-		margin: .5em;
 	
-		
-		}	
-		
-		
-	.footer-links li{
-		
-	display: inline;
-	font-size: 1em;
-	padding: 0em .55em;
-	
-		
-		
-		}
-	
-	#footer-links{
-		
-		text-align: center;
-		
-		}
-
-		
-
-		
-		
-	footer a:link{
-	 text-decoration: none;
-	 font-family: 'Oswald', arial, verdanca, sans-serif;
-	 text-transform: uppercase;
-	 font-weight: 300;
-	 color: white;
-	 vertical-align: middle;
-	 
-	}
-	
-	
-	 footer a:visited{
-	 text-decoration: none;
-	
-	 color: gray;
-	 
-	}
-	
-	footer a:hover{
-	 text-decoration: none;
-	
-	 color: #6dcff6;
-	 
-	}
-	
-	footer a:active{
-	 text-decoration: none;
-	
-	 color: #6dcff6;
-	 
-	}
 	
 		
 div#social-footer{
