--- a/css/interior.css
+++ b/css/interior.css
@@ -66,7 +66,7 @@ body{
 	font-weight: 700;
 	color: #fff;
 	text-transform: uppercase;
-	padding-top: 2em;
+	padding-top: 2.15em;
 	
 	
 	
@@ -81,7 +81,6 @@ body{
 	font-size: 1.5em;
 	font-weight: 100;
 	color: white;
-	padding-bottom: 1em;
 	
 	
 	
@@ -91,7 +90,7 @@ body{
 
 #title-bar h2{
 	
-	padding: .35em 0em .75em 0em;
+	padding: 0em 0em .55em 0em;
 	margin: 0em;
 	
 	
@@ -141,14 +140,49 @@ body{
 
 @media only screen and (max-width: 641px) {	
 
+nav{
+	
+	
+	}
+	
+	.address-email p{
+		
+		color: white;
+		
+		}
+
+h1.title-header {
+	background-color: #000;
+
+	
+	padding-top: 20%;
+	overflow: hidden;
+	clear: both;
+	
+	}
+	
+
+	
+#title-bar{
+	
+	background-image: none;
+	background-color: #000;
+	width: 100%;
+	background-position: center;
+	background-repeat: repeat-y;
+	background-size: 100%;
+	text-align: center;
+	margin-top: 3.25em;
+	overflow: hidden;
+	
 
 	
 	
+	}
 	
 	
 	
-	
-	
+		
 	
 }	
 	
@@ -204,7 +238,7 @@ body{
 	
 	.title-header{
 
-	padding-top: 1.5em;
+	padding-top: 1.85em;
 	
 	
 	
@@ -251,6 +285,13 @@ body{
 	
 	}
 	
+.title-header{
+	
+	padding-top: 2em;
+	
+	
+	}	
+	
 	#title-bar h2{
 	
 	padding: .35em 0em .95em 0em;
@@ -288,7 +329,7 @@ body{
 	font-weight: 700;
 	color: #fff;
 	text-transform: uppercase;
-	padding-top: 2.5em;
+	padding-top: 2.75em;
 	
 	
 	
